--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ body {
 	background-color: #4C5471;
 	color: #282829;
 }
-
+div.body {
+	padding:30px;
+}
 .pagetitle {
 	font-family: 'Helvetica', sans-serif;
 	text-align: center;
@@ -58,7 +60,6 @@ div.menuitem {
 	font-size: 20px;
 	color: #C8C5C5;
 	text-align:left;
-	padding: 25px;
 }
 .footer {
 	text-align:center;
@@ -73,4 +74,17 @@ div.menuitem {
 	font-family:arial;
 	font-size:20px;
 	margin-bottom: 20px;
+	margin-top: 20px;
+}
+.toc1 {
+	padding-left: 35px;
+	text-align: justify;
+}
+.text {
+	font-family: sans-serif;
+	font-size: 14px;
+	color: white;
+}
+h2 {
+	color: #ABAAAF;
 }
