--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
 	background-color: #4C5471;
 	color: #282829;
@@ -23,7 +22,13 @@ div.body {
 	border-radius:40px;
 	float:left;
 }
-
+textarea {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 85%;
+		height: 400px;
+}
 div.menuitem {
 	display: inline-block;
 	width: 320px;
@@ -102,4 +107,8 @@ h2 {
 	padding-bottom:60px;
 	padding-top:20px;
 	border-radius:40px;
+}
+nav a{
+	padding-left: 50px;
+	padding-right: 50px;
 }
