--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
 }
 div.body {
 	padding:30px;
+/*	width: 75%; */
+	float:left;
 }
 .pagetitle {
 	font-family: 'Helvetica', sans-serif;
@@ -96,6 +98,7 @@ h2 {
 }
 .sidebar {
 	text-align:center;
+	width:25%;
 }
 .toc {
 	text-align: center;
