Fixed import and added CSS for import page.

--- a/style.css
+++ b/style.css
@@ -119,3 +119,15 @@ nav a{
 option {
 	color:black;
 }
+input[type=text], select {
+    width: 40%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+		color:black;
+}
+textarea {
+    color: #000;
+    }
