--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h2 {
 }
 .sidebar {
 	text-align:center;
-	width:20%;
+	min-width: 200px;
 	background-color: #37393E;
 	text-align:center;
 	margin-top:15px;
@@ -143,7 +143,12 @@ input[type=text], select {
 }
 textarea {
     color: #000;
+		width: 80%;
+		height: 100%;
     }
 ul {
 	list-style-type: none;
+}
+#npc-form, #settlement-form, #deity-form, #faction-form {
+	display:none;
 }
