--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body {
 	color: #282829;
 }
 div.body {
-	padding:30px;
-
+	padding-left:30px;
+	padding-right:30px;
+	padding-bottom:30px;
 }
 .pagetitle {
 	font-family: 'Helvetica', sans-serif;
@@ -19,7 +20,7 @@ div.body {
 	text-align:center;
 	margin-top:15px;
 	padding-bottom:60px;
-	padding-top:20px;
+	padding-top:0px;
 	border-radius:40px;
 	float:left;
 }
@@ -27,8 +28,11 @@ textarea {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    width: 85%;
+    width: 100%;
 		height: 400px;
+		display:block;
+		margin-left: auto;
+		margin-right: auto;
 }
 div.menuitem {
 	display: inline-block;
@@ -118,9 +122,9 @@ h2 {
 .tocbox {
 	background-color: #37393E;
 	text-align:center;
-	margin-top:15px;
+	margin-top:5px;
 	padding-bottom:60px;
-	padding-top:20px;
+	padding-top:0px;
 	border-radius:40px;
 }
 nav a{
@@ -132,7 +136,7 @@ nav a{
 option {
 	color:black;
 }
-input[type=text], select {
+select > input[type=text] {
     width: 40%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -140,11 +144,16 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
 		color:black;
+		text-align: justify;
+}
+input, .col-centered {
+	margin-top: 10px;
+	text-align: center;
 }
 textarea {
     color: #000;
 		width: 80%;
-		height: 100%;
+		height:300px;
     }
 ul {
 	list-style-type: none;
@@ -164,4 +173,26 @@ ul {
 }
 .modal-footer {
 	border-top: none;
+}
+.typebox {
+	min-width: 250px;
+
+}
+.importbox {
+	background-color: green;
+}
+.col-centered {
+  float: none;
+  margin-right: auto;
+  margin-left: auto;
+}
+.textbox {
+    width: 100%;
+    padding: 2px 2px;
+    margin: 0px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+		color:black;
+		text-align: left;
 }
