--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ nav a{
 option {
 	color:black;
 }
-select > input[type=text] {
+select input[type=text] {
     width: 40%;
     padding: 12px 20px;
     margin: 8px 0;
