--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ div.body {
 	font-family: arial;
 	font-weight: bold;
 	color: #94A0CE;
+	font-size: 40px;
+	margin-top: 10px;
 }
 
 .mainbox {
@@ -195,4 +197,12 @@ ul {
     border-radius: 4px;
 		color:black;
 		text-align: left;
+}
+.editbutton {
+	margin-left: 10px;
+	font-size: 14px;
+	opacity: 0.6;
+}
+.glyphicon-edit {
+	padding-right: 5px;
 }
