--- a/style.css
+++ b/style.css
@@ -133,20 +133,12 @@ h2 {
 }
 
 .tocitem {
+	margin-bottom: 30px;
 }
 option {
 	color:black;
 }
-select input[type=text] {
-    width: 40%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-		color:black;
-		text-align: justify;
-}
+
 input, .col-centered {
 	margin-top: 10px;
 	text-align: center;
@@ -293,4 +285,13 @@ ul {
 .spellDetail {
 margin-bottom: 30px;
 font-size: 16px;
+}
+.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
+   background-color: #2F3034;
+}
+a {
+	color: #94A0CE;
+}
+a:hover {
+	color: #7A85B1;
 }
