--- a/style.css
+++ b/style.css
@@ -330,3 +330,11 @@ p.subentry {
 .hp-track {
 	width:200px;
 }
+
+.one:before  { content: "Token"; color: blue; }
+.two:before  { content: "Token"; color: green; }
+.three:before  { content: "Token"; color: red; }
+.four:before  { content: "Token"; color: yellow; }
+.five:before  { content: "Token"; color: purple; }
+.six:before  { content: "Token"; color: white; }
+.seven:before  { content: "Token"; color: black; }
