added mystic features to class page

--- a/style.css
+++ b/style.css
@@ -297,6 +297,9 @@ a:hover {
 .tab-content h3 {
 	color: #5499c7;
 }
+.mystic h3 {
+	color: #5499c7;
+}
 p.subentry {
 	color: #DCE8F5;
 	font-family:arial;
