image upload from within import page, auto naming, and display

--- a/style.css
+++ b/style.css
@@ -452,3 +452,11 @@ height: 500px;
 	padding-left: 40px;
 	padding-right: 40px;
 }
+
+.npcimg {
+
+	width: 100%;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	border-radius: 40px;"
+}
