--- a/style.css
+++ b/style.css
@@ -460,7 +460,7 @@ height: 500px;
 	margin-bottom: 20px;
 	border-radius: 40px;"
 }
-strong {
+p strong{
 	color: #779DC7;
 }
 
@@ -481,7 +481,7 @@ strong {
 }
 
 .topsearch {
-	min-width: 300px;
+	min-width: 240px;
 }
 
 .nav {
