--- a/style.css
+++ b/style.css
@@ -458,7 +458,15 @@ height: 500px;
 	width: 100%;
 	margin-right: 20px;
 	margin-bottom: 20px;
-	border-radius: 40px;"
+	border-radius: 40px;
+}
+.monsterimg {
+	max-height: 300px;
+	
+	margin-right: 20px;
+	margin-bottom: 20px;
+	border-radius: 40px;
+	float:right;
 }
 p strong{
 	color: #779DC7;
