Added background image

--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {
-	background-color: #222326;
 	color: #282829;
 	min-width: 350px;
+	  background: url(assets/images/bg.jpg) no-repeat center center fixed;
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
+		opacity:0.9;
 }
 div.body {
 	padding-left:30px;
@@ -462,7 +467,7 @@ height: 500px;
 }
 .monsterimg {
 	max-height: 300px;
-	
+
 	margin-right: 20px;
 	margin-bottom: 20px;
 	border-radius: 40px;
