--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 		opacity:0.9;
 }
 div.body {
-	padding-left:30px;
-	padding-right:30px;
+	padding-left:3%;
+	padding-right:3%;
 	padding-bottom:30px;
 }
 .pagetitle {
@@ -30,6 +30,8 @@ div.body {
 	padding-bottom:60px;
 	padding-top:0px;
 	border-radius:40px;
+	padding-left: 1%;
+	padding-right: 1%;
 }
 textarea {
     -webkit-box-sizing: border-box;
