--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ div.body {
 }
 
 .mainbox {
-	background-color: #313337;
+	background-color: #1F2123;
 	text-align:center;
 	margin-top: 0px;
 	padding-bottom:60px;
