--- a/style.css
+++ b/style.css
@@ -336,6 +336,7 @@ p.subentry {
 .blockframe {
 	width: 100%;
 	height:100%;
+	min-height:500px;
 }
 .hp-track {
 	width:140px;
@@ -460,7 +461,6 @@ height: 500px;
 	opacity: 0.7;
 	border-radius: 80px;
 	padding:0px 20px;
-    background-clip:content-box;
 }
 
 .quest-img {
