--- a/style.css
+++ b/style.css
@@ -652,3 +652,24 @@ color: #3D6D8D;
 .txtimg {
 	height:1em;
 }
+
+@media screen and (min-width: 601px) {
+  .quote {
+		font-size: 30px;
+		color: #9fa3a2;
+		margin-right: 5%;
+		margin-left: 5%;
+  }
+
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+  .quote {
+		font-size: 6vw;
+		color: #9fa3a2;
+		margin-right: 5%;
+		margin-left: 5%;
+  }
+
+}
