--- a/style.css
+++ b/style.css
@@ -336,7 +336,12 @@ p.subentry {
 .blockframe {
 	width: 100%;
 	height:100%;
-	min-height:800px;
+	min-height:426px;
+}
+.blockframetall {
+	width: 100%;
+	height:100%;
+	min-height:900px;
 }
 .hp-track {
 	width:140px;
@@ -680,4 +685,15 @@ color: #3D6D8D;
 		display: none;
   }
 
+}
+
+#musiclist.dropdown-menu{
+margin-right:-1000px;
+margin-left:-600px;
+background: #000;
+
+}
+
+#musiclist.dropdown-menu > li {
+    display: inline-block;
 }
