--- a/style.css
+++ b/style.css
@@ -749,3 +749,82 @@ background: #000;
 a:hover {
  cursor:pointer;
 }
+
+.char-left-col {
+	/*background: blue;*/
+}
+
+@media screen and (min-width: 601px) {
+	.statBox {
+		position: relative;
+		border-radius: 10px;
+		background-color:rgba(148, 160, 206, 0.5);
+		width: 100px;
+		height: 100px;
+		margin: 5px 10px 5px 10px;
+		text-align: center;
+		padding: 0px;
+
+	}
+
+	.statName {
+		position: absolute;
+		bottom: 0;
+		text-align: center;
+		width: 100%;
+	}
+
+	.statMod {
+	position:absolute; /*it can be fixed too*/
+	top:10%;
+	font-size: 54px;
+	width: 100%;
+	}
+
+	.statProf {
+		/*background: red;*/
+		font-size: 12px;
+	}
+
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+	.statBox {
+		position: relative;
+		border-radius: 10px;
+		background-color:rgba(148, 160, 206, 0.5);
+		width: 80px;
+		height: 80px;
+			margin: 5px 10px 5px 10px;
+		text-align: center;
+		padding: 0px;
+	}
+
+	.statName {
+		position: absolute;
+		bottom: 0;
+		font-size: 12px;
+		text-align: center;
+		width:100%;
+	}
+
+	.statMod {
+	position:absolute; /*it can be fixed too*/
+	top:27%;
+	width:100%;
+	font-size: 29px;
+	}
+
+	.statProf {
+		/*background: red;*/
+		font-size: 3vw;
+	}
+
+}
+
+.fullStatBox {
+	border-style: solid;
+	border-color: grey;
+	border-radius: 10px;
+}
