--- a/style.css
+++ b/style.css
@@ -924,3 +924,12 @@ a:hover {
 	font-size: 14px;
 	margin-bottom: 10px;
 }
+
+.subclassSelect {
+	display:none;
+}
+
+.sheetDrop {
+	background: none;
+	border: 0px;
+}
