races totally working

--- a/style.css
+++ b/style.css
@@ -912,8 +912,9 @@ a:hover {
 	font-size: 55px;
 }
 
-.vitalsTable {
+.sheetBlock {
 	border: 1px solid white;
+	border-radius: 10px;
 }
 
 .featureName {
