--- a/style.css
+++ b/style.css
@@ -889,7 +889,7 @@ a:hover {
 	width: 80%;
 	padding: 5px;
 	border: 0px;
-	text-align: left;
+	text-align: center;
 	background: none;
 	margin-top: 10px;
 }
@@ -933,4 +933,5 @@ a:hover {
 .sheetDrop {
 	background: none;
 	border: 0px;
+	width:100%;
 }
