added classes. Working on subclasses

--- a/style.css
+++ b/style.css
@@ -1010,5 +1010,9 @@ a:hover {
 .createModal {
     /* 100% = dialog height, 120px = header + footer */
     max-height: calc(100% - 120px);
-    overflow-y: scroll;
+    overflow: hidden;
+}
+
+.charCreateFrame {
+	overflow: auto;
 }
