--- a/style.css
+++ b/style.css
@@ -1035,3 +1035,18 @@ a:hover {
 .smallertext {
 	font-size: 12px;
 }
+
+.notestext {
+	color: #b3b3b3;
+	padding: 5px;
+	border: 0px;
+	border-radius: 10px;
+	background: none;
+	width: 100%;
+	height: 400px;
+	text-align: left;
+}
+
+.delitem {
+	padding: 0px 3px 0px 3px;
+}
