--- a/style.css
+++ b/style.css
@@ -904,6 +904,14 @@ a:hover {
 	border: 0px;
 }
 
+.vitals1 {
+	height: 100%;
+	width:90%;
+	color:black;
+	/*background: none;*/
+	border: 0px;
+}
+
 .bigVital {
 	font-size: 55px;
 }
